@@ -22,6 +22,8 @@ Minor changes:
  * Added a new event, OBJECT`FLAG, triggered when a flag/power with the
    "event" restriction is set or cleared. Suggested by [SW]. [MG]
  * Expanded help on lock types and @powers. [MG]
+ * @startups are now processed in db order (#0, #1, etc) on reboot instead
+   of giving priority to player objects. [MG]
  
 Commands:
  * Added @mail/review for reading mail you've sent, and @mail/retract for
